--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -31,7 +31,7 @@ jobs:
   Publish-HLC-Site:
     runs-on: ubuntu-latest
     env:
-      RELEASE_REPO: git@github.com:eaglerock1337/happy-little-cloud.git
+      RELEASE_REPO: eaglerock1337/happy-little-cloud
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
