--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Get Git Short Shahash
         id: new_sha
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      - name: Check outputs
+      - name: Check new sha hash
         run: echo ${{ steps.new_sha.outputs.sha_short }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -27,6 +27,8 @@ jobs:
           tags: |
             eaglerock/marks.dev:latest
             eaglerock/marks.dev:${{ steps.new_sha.outputs.sha_short }}
+    outputs:
+      new_sha: ${{ steps.new_sha.outputs.sha_short }}
 
   Publish-HLC-Site:
     runs-on: ubuntu-latest
@@ -38,8 +40,10 @@ jobs:
           token: ${{ secrets.HLC_GITHUB_TOKEN }}
       - name: Get Old Version from Chart yaml
         id: old_sha
-        run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'"')" >> $GITHUB_OUTPUT
+        run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'\"')" >> $GITHUB_OUTPUT
+      - name: Check old sha hash
+        run: echo ${{ steps.old_sha.outputs.sha_short }}
       - name: Swap Git Tag in Chart.yaml
-        run: sed -i /appVersion/s/${{ steps.old_sha.outputs.sha_short }}/${{ steps.new_sha.output.sha_short }}/ Chart.yaml
+        run: sed -i /appVersion/s/${{ steps.old_sha.output.sha_short }}/${{ jobs.Build-Site-Image.outputs.new_sha }}/ Chart.yaml
       - name: Commit New Version to GitHub
         run: git commit -am "Update marks.dev site to use ${{ steps.new_sha.output.sha_short }} tag" && git push
