--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -44,6 +44,8 @@ jobs:
         run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'\"')" >> $GITHUB_OUTPUT
       - name: Check old sha hash
         run: echo ${{ steps.old_sha.outputs.sha_short }}
+      - name: Move to marks.dev chart directory
+        run: cd happy-little-cloud/marks.dev
       - name: Swap Git Tag in Chart.yaml
         run: sed -i /appVersion/s/${{ steps.old_sha.output.sha_short }}/${{ needs.Build-Site-Image.outputs.new_sha }}/ Chart.yaml
       - name: Commit New Version to GitHub
