--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -44,6 +44,8 @@ jobs:
         run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'\"')" >> $GITHUB_OUTPUT
       - name: Check old sha hash
         run: echo ${{ steps.old_sha.outputs.sha_short }}
+      - name: Debug current directory
+      	run: ls -l
       - name: Move to marks.dev chart directory
         run: cd happy-little-cloud/marks.dev
       - name: Swap Git Tag in Chart.yaml
