--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -41,10 +41,14 @@ jobs:
           token: ${{ secrets.HLC_GITHUB_TOKEN }}
       - name: Get Old Version from Chart yaml
         id: old_sha
-        run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'\"')" >> $GITHUB_OUTPUT
+        run: echo "sha_short=$(grep appVersion Chart.yaml | cut -f2 -d'"')" >> $GITHUB_OUTPUT
       - name: Check old sha hash
         run: echo ${{ steps.old_sha.outputs.sha_short }}
+      - name: Set Git Name
+      	run: git config --global user.name "Autobob"
+      - name: Set Git Email
+      	run: git config --global user.email "bob@marks.dev"
       - name: Swap Git Tag in Chart.yaml
-        run: sed -i /appVersion/s/${{ steps.old_sha.output.sha_short }}/${{ needs.Build-Site-Image.outputs.new_sha }}/ marks.dev/Chart.yaml
+        run: sed -i /appVersion/s/${{ steps.old_sha.outputs.sha_short }}/${{ needs.Build-Site-Image.outputs.new_sha }}/ marks.dev/Chart.yaml
       - name: Commit New Version to GitHub
         run: git commit -am "Update marks.dev site to use ${{ needs.Build-Site-Image.outputs.new_sha }} tag" && git push
